<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Login Strings    -->
    <string name="login_title">Shoe Store</string>
    <string name="login_email_hint_text">Email</string>
    <string name="login_password_hint_text">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create New Account</string>
    <!-- Onboarding Strings   -->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_body">Welcome to the Shoe Story Inventory App. We\'re glad you\'re here. Let\'s get started by getting you familiar with this app. Press <b>\'Next\'</b> when ready. </string>
    <string name="welcome_img_content_descrption">Welcome Background Image</string>
    <string name="welcome_next_button">Next</string>
    <string name="instructions_title">Shoe Store Onboarding</string>
    <string name="instructions_sub_title_desc">Description</string>
    <string name="instructions_sub_title_instr">Instructions</string>
    <string name="instructions_body_description">The Shoe Store Inventory is an app that allows you to create an account or login to view a list of inventory items, shoes, that you get to add. You can also logout and login anytime or create another account. </string>
    <string name="instructions_body_instructions">Let\'s get started! You are already logged in. Once you press <b>\'Take me to my shoes!\'</b>, you will be taken to your last saved inventory of shoes where you can view details or add more using the add inventory button.</string>
    <string name="instructions_next_button">Take me to my shoes!</string>
    <!--  Shoe Inventory Strings  -->
    <string name="shoe_inventory_title">Shoe Inventory</string>
    <string name="shoe_inventory_null_state_text">Added shoes will be listed here</string>
    <string name="shoe_inventory_floating_action_button_text">Add Inventory</string>
    <!--  Shoe Details Strings  -->
    <string name="shoe_name_field_label">Shoe Name</string>
    <string name="shoe_company_field_label">Shoe Company</string>
    <string name="shoe_size_field_label">Shoe Size</string>
    <string name="shoe_description_field_label">Shoe Description</string>
    <string name="shoe_primary_button_label">Save</string>
    <string name="shoe_secondary_button_label">Cancel</string>
    <string name="shoe_name_edit_text_hint">Shoe Name</string>
    <string name="shoe_company_edit_text_hint">Shoe Company</string>
    <string name="shoe_size_edit_text_hint">Shoe Size</string>
    <string name="shoe_description_edit_text_hint">Shoe Description</string>
    <string name="shoe_inventory_item">%s, %s, %s, %s</string>
    <!-- Overflow Menu -->
    <string name="overflow_menu_logout_option">Logout</string>

</resources>
