<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.onboarding.InstructionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/onboarding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/onboarding_screen_horizontal_margin"
            android:layout_marginVertical="@dimen/onboarding_screen_vertical_margin"
            android:text="@string/instructions_title"
            android:textSize="@dimen/onboarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/onboarding_screen_horizontal_margin"
            android:layout_marginVertical="@dimen/onboarding_screen_vertical_margin"
            android:textSize="@dimen/instructions_sub_title_text_size"
            android:text="@string/instructions_sub_title_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_title" />

        <TextView
            android:id="@+id/body_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/onboarding_screen_horizontal_margin"
            android:layout_marginVertical="@dimen/onboarding_screen_vertical_margin"
            android:text="@string/instructions_body_description"
            android:textSize="@dimen/onboarding_body_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_description" />

        <TextView
            android:id="@+id/subtitle_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/onboarding_screen_horizontal_margin"
            android:layout_marginVertical="@dimen/onboarding_screen_vertical_margin"
            android:textSize="@dimen/instructions_sub_title_text_size"
            android:text="@string/instructions_sub_title_instr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_description" />

        <TextView
            android:id="@+id/body_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/onboarding_screen_horizontal_margin"
            android:layout_marginVertical="@dimen/onboarding_screen_vertical_margin"
            android:text="@string/instructions_body_instructions"
            android:textSize="@dimen/onboarding_body_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_instructions" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/onboarding_screen_vertical_margin"
            android:layout_marginHorizontal="@dimen/onboarding_screen_horizontal_margin"
            android:text="@string/instructions_next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>